<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/pureBlack"
    
    android:id="@+id/artistItemParentLayout">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/artistImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerVertical="true"
        android:src="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/artistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/artist_name"
        android:textColor="@color/lastFmRed"
        android:textSize="10pt"
        android:layout_toEndOf="@id/artistImage"
        android:layout_marginStart="30dp"/>

    <TextView
        android:id="@+id/artistPlayCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/play_count"
        android:textColor="@color/lastFmRed"
        android:textSize="10pt"
        android:layout_below="@id/artistName"
        android:layout_toEndOf="@id/artistImage"
        android:layout_marginStart="30dp"/>

    <TextView
        android:id="@+id/artistListeners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/listeners"
        android:textColor="@color/lastFmRed"
        android:textSize="10pt"
        android:layout_toEndOf="@id/artistImage"
        android:layout_below="@id/artistPlayCount"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"/>


</RelativeLayout>